# linear-mcp

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: release.yml
linear_mcp/: __init__.py  linear_client.py  main.py
mcp_linear/: linear_client.py
