[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-linear"
version = "0.1.1"
description = "Linear MCP Server"
authors = [
    {name = "Vinayak Mehta", email = "vmehta94@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "httpx>=0.24.0",
    "mcp>=0.1.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
mcp-linear = "mcp_linear.main:main"
linear-mcp = "mcp_linear.main:main"

[project.urls]
"Homepage" = "https://github.com/vinayak-mehta/linear-mcp"
"Bug Tracker" = "https://github.com/vinayak-mehta/linear-mcp/issues"
